update logic scrape shopee